fix(home): fixed scroll issue in home page
replaced sticky-scrollbar with custom HTML using position:sticky and fixed horizontal scroll issue

fix #339

--- a/src/components/app-cta/app-cta.scss
+++ b/src/components/app-cta/app-cta.scss
@@ -7,6 +7,7 @@
 
   .row {
     height: 100%;
+    width: 100vw;
     background: linear-gradient(to bottom, rgba(108, 144, 152, 0.99), #3f5a60);
   }
 
